fix: btn wrap in setDisplay

--- a/counter2/src/App.css
+++ b/counter2/src/App.css
@@ -32,5 +32,6 @@
 }
 
 .set-display {
-
+  display: flex;
+  flex-direction: column;
 }
